--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <html>
-  <h1>Welcome!!!💐💐💐</h1>
-  <p> <a href = "form.html">Tap here to open</a>
+  <h1>Welcome!!! to secod stage💐💐💐</h1>
+  <p> <a href = "form2.html">Tap here to open</a>
 </html>
