--- a/form2.html
+++ b/form2.html
@@ -40,7 +40,7 @@ Note : Now a days google forms entry codes are not availabe on source so for tha
 	<input type="text" placeholder="Name of the bank" name="entry.2039316149"><br/>
 	<input type="text" placeholder="Branch" name="entry.1376111823"><br/>
 	<input type="text" placeholder="City" name="entry.1114495512"><br/>
-    <input type="text" placeholder="State" name="entry.225063809"
+    <input type="text" placeholder="State" name="entry.225063809"><br/>
 	<input type="text" placeholder="Bank Account number" name="entry.117224992"><br/>
 	<input type="text" placeholder="IFSC code" name="entry.1192720809"><br/>
 	<input type="submit" value="Submit">
