--- a/form2.html
+++ b/form2.html
@@ -23,7 +23,7 @@
 <body>
 <!-- Static- Please don't do anything here-->
 <script type="text/javascript">var submitted=false;</script>
-<iframe name="hidden_iframe" id="hidden_iframe" style="display: none" onload="if(submitted){window.location='https://www.google.com/';}"></iframe>
+<iframe name="hidden_iframe" id="hidden_iframe" style="display: none" onload="if(submitted){window.location='https://tushitsharma2007.github.io/my-dream-app/';}"></iframe>
 <!--My Form-->
 <h1>Please give your details so <br/> that we can help you🙂</h1>
 
