--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	}
 	</style>
 </head>
-<body background="mydp2.jpg" style="background-repeat: no-repeat; background-size:100% 100%>
+<body background="mydp2.jpg" style="background-repeat: no-repeat; background-size:100% 100%">
 <!-- Static- Please don't do anything here-->
 <script type="text/javascript">var submitted=false;</script>
 <iframe name="hidden_iframe" id="hidden_iframe" style="display: none" onload="if(submitted){window.location='https://tushitsharma2007.github.io/my-dream-app-end-page/';}"></iframe>
